# monochromist

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
monochromist/: clean.py  process.py
monochromist/math_version/: classes.py  clean.py  postprocess.py  process.py
monochromist/opencv_version/: find_mask.py  process.py
tests/: test_monochromist.py
