[tool.poetry]
name = "monochromist"
version = "0.1.0"
description = ""
authors = ["Bogdan Neterebskii <bog2dan1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.2.0"
numpy = "^1.20.2"
colour = "^0.1.5"
click = "^7.1.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
monochromist = "monochromist.process:process"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
